# llm-github-copilot

./: .gitignore  Dockerfile  README.md  llm_github_copilot.py  pyproject.toml  run-tests.sh
.github/workflows/: publish.yml  python-app.yml  test.yml
tests/: conftest.py  test_github_copilot.py  test_github_copilot_cli.py
tests/cassettes/: .gitkeep  test_authenticator.yaml  test_build_conversation_messages.yaml  test_get_model_for_api.yaml  test_get_streaming_models.yaml  test_model_mappings.yaml  test_model_variants.yaml  test_non_streaming_request.yaml  test_options.yaml  test_prompt.yaml  test_streaming_response.yaml
